5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1723_2503.log
== TEST (2019-05-14 11:07:48) 
-- CODE:
soma = 0
i = 1
fim = n-1

while (i <= fim):
	soma - soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fim = n-1
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:07:50) 
-- CODE:
soma = 0
i = 1
fim = n-1

while (i <= fim):
	soma - soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.510321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 3, in <module>
    fim = n-1
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:08:15) 
-- CODE:
soma = 0
i = 0
fim = n-1

while (i <= fim):
	soma - soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fim = n-1
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:08:17) 
-- CODE:
soma = 0
i = 0
fim = n-1

while (i <= fim):
	soma - soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.435125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 3, in <module>
    fim = n-1
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:08:42) 
-- CODE:
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fim = n - 1
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:08:44) 
-- CODE:
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.487689
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2503/main.py", line 3, in <module>
    fim = n - 1
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:19) 
-- CODE:
n = int(input("dkaskd:")
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:22) 
-- CODE:
n = int(input("dkaskd:")
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.515403
-- ERROR:
  File "/home/codebench/codes/1723/2503/main.py", line 2
    soma = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:59) 
-- CODE:
n = float(input("n de aproximaçoes:")
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:11) 
-- CODE:
n = float(input("n de aproximaçoes:"))
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
-181.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:10:17) 
-- CODE:
n = float(input("n de aproximaçoes:"))
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma +((-1)**1)*(4/(2*1+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.520006
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-181.33333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-29.33333333
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-20.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:51) 
-- CODE:
n = float(input("n de aproximaçoes:"))

soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma + ((-1)**i)*(4/(2*i+1))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:13) 
-- CODE:
n = float(input("n de aproximaçoes:"))
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma + ((-1)**i)*(4/(2*i+1))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:11:13) 
-- CODE:
n = float(input("n de aproximaçoes:"))
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma + ((-1)**i)*(4/(2*i+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.537974
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:11:19) 
-- CODE:
n = float(input("n de aproximaçoes:"))
soma = 0
i = 0
fim = n - 1

while (i <= fim):
	soma = soma + ((-1)**i)*(4/(2*i+1))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.75046
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
